--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -9,16 +9,18 @@ cd .# Used to store settings ONE PLACE, required throughout the code
 # DO NOT CHANGE the key-names related to the two databases, obviously you can change the values
 
 db.server=localhost
-db.port=3307
+db.port=3306
 db.user=dev
 db.password=ax2
 
+
+
 # Name of your development database
-db.database=EXAMEN
+db.database=Exam
 
 
 # Name of your test-database
-dbtest.database=EXAMEN_test
+dbtest.database=Exam_test
 
 # Only use this if you REALLY MUST, if not set (recommended) the values for db.xxx  will be used
 # dbtest.server=localhost
