--- a/react/package.json
+++ b/react/package.json
@@ -2,7 +2,7 @@
   "name": "onsdag",
   "version": "0.1.0",
   "private": true,
-  "homepage": "Examen/",
+  "homepage": "https://matheradical.dk/Examen",
   "proxy": "http://localhost:8080/Examen/",
   "dependencies": {
     "bootstrap": "^4.4.1",
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
