--- a/react/package.json
+++ b/react/package.json
@@ -2,7 +2,7 @@
   "name": "onsdag",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://www.matheradical.dk/Examen/",
   "proxy": "http://localhost:8080/Examen/",
   "dependencies": {
     "bootstrap": "^4.4.1",
